Small fixes to register (errors in dutch and slightly bigger font-size, addcar dialog isn't made visible for half a second before moving on to profile

--- a/frontend/src/main/webapp/app/css/login.css
+++ b/frontend/src/main/webapp/app/css/login.css
@@ -180,7 +180,7 @@ form.forgot_password{
 .form_wrapper span.error{
 	/*visibility:hidden;*/
 	color:red;
-	font-size:11px;
+	font-size:13px;
 	font-style:italic;
 	display:block;
 	margin:4px 30px;
